Page MenuHome GnuPG

abort in gpgparsemail
Closed, ResolvedPublic

Description

Attached file will cause an abort. abort's usually should only be used in code
paths that are never reached by normal application operation, so I think this is
a bug. Tested with latest version 2.1.4.

(found through fuzzing with american fuzzy lop)

Details

Version
2.1.4

Revisions and Commits

Related Objects

Event Timeline

hanno added a project: Bug Report.
hanno added a subscriber: hanno.

It was already on my own todo list (i.e. ticked in the mail folder). Thanks for
adding it to the tracker.

FYI this is still unfixed.
I think it'd be valuable to run another round of fuzzing tests, but this should be fixed before, otherwise it'll just be hit all the time and may hide other bugs.

gniibe claimed this task.

Fixed in master.